--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
           <li>
             <a
-              href="https://www.instagram.com/agro_miniaturas_bg/"
+              href="https://www.instagram.com/bragro_creations_ofc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
               title="Ir para o Instagram"
               target="_blank"
             >
